♻️ refactor(NarkdownPreview): Detach vditor markdown render to a single component

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MarkdownPreview/MarkdownPreview.razor
@@ -1,10 +1,12 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-@if (Show)
-{
-    <MarkdownPreviewContent Value="@Value"
-                            Class="@Class"
-                            Style="@Style"
-                            Options="_options">
-    </MarkdownPreviewContent>
-}
+<VditorMarkdownPreview @ref="vditorMarkdownPreview"
+                       Value="@Value"
+                       Class="@Class"
+                       Style="@Style"
+                       Options="_options">
+</VditorMarkdownPreview>
+
+<PreviewImageDialog @bind-Visible="showPreviewImage"
+                    Src="@previewImageSrc">
+</PreviewImageDialog>
