--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/ImageSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/ImageSettingPage.razor
@@ -23,7 +23,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <ImageResourceCardList Value="imageResources"></ImageResourceCardList>
+    <ImageWaterfall Value="imageResources"></ImageWaterfall>
 </ScrollContainer>
 
 <DeleteDialog @bind-Visible="showConfimDelete"
