--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -66,7 +66,7 @@
                 </MListItemContent>
                 <MListItemContent Class="setting-state">
                     <MListItemSubtitle>
-                        @(editAutoSave.ToString() + "s")
+                        @EditAutoSaveText
                     </MListItemSubtitle>
                 </MListItemContent>
                 <MListItemAction>
@@ -145,9 +145,8 @@
 </ScrollContainer>
 
 <SelectDialog @bind-Visible="showEditAutoSave"
-                  @bind-Value="@EditAutoSave"
-                  Title="@(I18n.T("Setting.Display.Diary.EditAutoSave.Name"))"
-                  Items="editAutoSaveItems"
-                  Text="@(item=>item.Key + "s")"
-                  Mandatory="true">
+              @bind-Value="@EditAutoSave"
+              Title="@(I18n.T("Setting.Display.Diary.EditAutoSave.Name"))"
+              Items="editAutoSaveItems"
+              Mandatory="true">
 </SelectDialog>
