--- a/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchLanguage.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchLanguage.razor
@@ -3,7 +3,8 @@
 <div class="@(ShowClass)" style="width:100%;max-width:420px;">
     @foreach (var item in LanguageListItems)
     {
-        <MButton Class="mb-5"
+        <MButton @key="item"
+                 Class="mb-5"
                  Rounded="true"
                  Block="true"
                  Outlined="true"
