--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
@@ -12,7 +12,9 @@
                    App="true">
     @foreach (var item in Items)
     {
-        <MainLayoutBottomNavItem Value="item"></MainLayoutBottomNavItem>
+        <MainLayoutBottomNavItem @key="item"
+                                 Value="item">
+        </MainLayoutBottomNavItem>
     }
 </MBottomNavigation>
 
