--- a/src/SwashbucklerDiary.Rcl/Layout/MainNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainNavDrawer/MainLayoutNavDrawer.razor
@@ -9,7 +9,8 @@
     <MList Nav>
         @foreach (var item in Items)
         {
-            <MainLayoutNavDrawerItem Value="item">
+            <MainLayoutNavDrawerItem @key="item"
+                                     Value="item">
             </MainLayoutNavDrawerItem>
         }
     </MList>
