--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -151,7 +151,8 @@
             <MChipGroup Column="true">
                 @foreach (var item in Tags)
                 {
-                    <MChip Outlined="true">
+                    <MChip @key="item.Id"
+                           Outlined="true">
                         @(item.Name)
                     </MChip>
                 }
