--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
@@ -20,7 +20,8 @@
     {
         @foreach (var item in AppFunctions)
         {
-            <MCard Class="mb-5"
+            <MCard @key="item"
+                   Class="mb-5"
                    Elevation="0"
                    Rounded="@("lg")"
                    OnClick="()=>To(item.Href!)">
