--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/VideoSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/VideoSettingPage.razor
@@ -23,7 +23,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    @(I18n.T("ToDo.Title"))
+    <VideoWaterfall Value="videoResources"></VideoWaterfall>
 </ScrollContainer>
 
 <DeleteDialog @bind-Visible="showConfimDelete"
