💄 style: optimize card a little style

--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANTransferPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANTransferPage.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Maui.Pages
 @inherits ImportantComponentBase
 
-<MCard Class="setting-card"
+<MCard Class="list-item-card"
        Elevation="0"
        Rounded="@("lg")">
     <MList>
@@ -31,7 +31,7 @@
     </MList>
 </MCard>
 
-<MCard Class="setting-card"
+<MCard Class="list-item-card"
        Elevation="0"
        Rounded="@("lg")">
     <MListItem OnClick="()=>ShowConfig=true">
