--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
@@ -1,7 +1,8 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Pages
 @inherits ImportantComponentBase
 
-<MCard Elevation="0"
+<MCard Class="list-item-card"
+       Elevation="0"
        Rounded="@("lg")">
     <MList TwoLine>
         <MListItem OnClick="Export">
