--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -82,7 +82,7 @@
         </div>
 
         <MCard @key="list"
-               Class="setting-card"
+               Class="list-item-card"
                Elevation="0"
                Rounded="@("lg")">
             <MList Class="dynamic-list-item-collection">
