--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -11,7 +11,7 @@
         @(I18n.T("Setting.General.Name"))
     </div>
 
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -56,7 +56,7 @@
         @(I18n.T("Setting.Display.Name"))
     </div>
 
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -142,7 +142,7 @@
         @(I18n.T("Setting.Safe.Name"))
     </div>
 
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
