--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Maui.Pages
 @inherits ImportantComponentBase
 
-<MCard Class="setting-card"
+<MCard Class="list-item-card"
        Elevation="0"
        Rounded="@("lg")">
     <MList>
