--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -40,7 +40,7 @@
     @foreach (var list in viewLists)
     {
         <MCard @key="list"
-               Class="@($"{(viewLists.Last() != list?"mb-5":"")}")"
+               Class="list-item-card"
                Elevation="0"
                Rounded="@("lg")">
             <MList Class="dynamic-list-item-collection">
