--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MListItem OnClick="()=>showTimeout=true">
@@ -30,7 +30,7 @@
         </MListItem>
     </MCard>
 
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MListItem>
