--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
@@ -76,7 +76,7 @@
         </MList>
     </MCard>
 
-    <MCard Class="setting-card"
+    <MCard Class="list-item-card"
            Elevation="0"
            Rounded="@("lg")">
         <MList>
