--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -2,16 +2,8 @@
     --vditor-toolbar-height: 70px;
 }
 
-/*改变配色*/
-.theme--light .vditor-toolbar {
-    background: #f7f8f9 !important;
-}
-
-.theme--dark .vditor-toolbar {
-    background: #121212 !important;
-}
-
 .vditor-toolbar {
+    background: var(--m-theme-surface) !important;
     padding-left: 0px !important;
 }
 
@@ -19,19 +11,15 @@
         padding: 0px 8px !important;
     }
 
-.theme--light .vditor-reset {
-    background-color: #f7f8f9 !important;
-}
-
 .theme--dark .vditor-reset {
-    background-color: #121212 !important;
     color: #fff;
 }
 
 .vditor-reset {
+    background-color: var(--m-theme-surface) !important;
+    border-radius: 8px;
     padding-left: 0px !important;
     padding-right: 0px !important;
-    border-radius: 8px;
 }
 
     .vditor-reset iframe {
