--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItems.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItems.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<div @ref="ElementRef" class="swiper" style=@($"{(Show?"":"display:none;")}")>
+<div @ref="ElementRef" class="swiper">
     <div class="swiper-wrapper">
         <CascadingValue Value="this"
                         IsFixed="true">
